k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ceo-era
spec:
  selector:
    app: ceo-era
  ports:
    - port: 80
      targetPort: 3000
